# WeatherCoin

./: .gitignore  Cargo.toml  README.md
example/beacon/: open-weather-api
src/: api.rs  beacon.rs  block.rs  main.rs  node.rs  p2p.rs  state.rs  transaction.rs  update.rs  util.rs
src/beacon/: target.geojson
src/blockchain/: address.rs  block.rs  chain.rs  transaction.rs
src/util/: command.rs  hash.rs  key.rs  math.rs  signature.rs  vdf.rs
