[package]
name = "weather-coin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
hex = "0.4.3"
openssl = "0.10.76"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.0", features = ["full"] }
vdf = "0.1.0"
